--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap bg-white">
               <img src="img/web04.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="img/web04.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
@@ -447,7 +447,7 @@
             </div>
           </div>
            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
+            <div class="portfolio-wrap bg-white">
               <img src="img/web06.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="img/web06.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
