--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap bg-white">
-              <img src="img/web04.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-wrap">
+              <img src="img/web04.jpeg" class="img-fluid my-5 px-2" alt="">
               <div class="portfolio-links">
                 <a href="img/web04.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Web 4"><i class="bx bx-plus"></i></a>
@@ -439,7 +439,7 @@
 
            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="img/web05.png" class="img-fluid" alt="">
+              <img src="img/web05.png" class="img-fluid my-5 py-5 px-2" alt="">
               <div class="portfolio-links">
                 <a href="img/web05.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Web 5"><i class="bx bx-plus"></i></a>
@@ -447,8 +447,8 @@
             </div>
           </div>
            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap bg-white">
-              <img src="img/web06.png" class="img-fluid" alt="">
+            <div class="portfolio-wrap">
+              <img src="img/web06.png" class="img-fluid " alt="">
               <div class="portfolio-links">
                 <a href="img/web06.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                   title="Web 5"><i class="bx bx-plus"></i></a>
