--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Bilal Saif</h1>
       <p>I'm <span class="typed"
-          data-typed-items=",E-commerce Expert Virtual Assistant.,Private Label Expert., FBA Wholesale Expert., Freelancer."></span>
+          data-typed-items=",E-commerce Expert Virtual Assistant.,FBA Wholesale Expert., Freelancer."></span>
       </p>
     </div>
   </section><!-- End Hero -->
@@ -222,15 +222,6 @@
               </div>
             </div>
 
-
-
-            <div class="progress">
-              <span class="skill">PRIVATE LABEL<i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
             <div class="progress">
               <span class="skill">FBA WHOLESALE <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
@@ -239,13 +230,12 @@
               </div>
             </div>
             <div class="progress">
-              <span class="skill">AMAZON PPC<i class="val">100%</i></span>
+              <span class="skill">SHOPIFY <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
-
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -272,13 +262,7 @@
                 </div>
               </div>
             </div>
-            <div class="progress">
-              <span class="skill">SHOPIFY <i class="val">95%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
+
           </div>
 
         </div>
@@ -299,7 +283,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Bilal Saif</h4>
               <p><em>My Name is Bilal Saif. I'm a Professional E-commerce Expert Virtual Assistant. I have 3 years of
@@ -317,7 +301,7 @@
               <h4>Matriculation</h4>
               <h5>2013 - 2015</h5>
               <p><em>BISE, Lahore, Pakistan</em></p>
-              <p>Scoring 64% marks with A+ Grade</p>
+              <p>Scoring 64% marks with A Grade</p>
             </div>
             <div class="resume-item">
               <h4>INTERMEDIATE</h4>
@@ -325,17 +309,18 @@
               <p><em>BISE, Lahore, Pakistan</em></p>
               <p>Scoring 72% marks with A Grade</p>
             </div>
+
+            <div class="resume-item">
+              <h4>BACHELOR IN Comuter Science</h4>
+              <h5>2017 - 2020</h5>
+              <p><em>Punjab University, Pakistan</em></p>
+              <p>2nd Division</p>
+            </div>
             <div class="resume-item">
               <h4>BACHELOR IN Zoology</h4>
               <h5>2019 - 2023</h5>
               <p><em>Virtual University, Pakistan</em></p>
               <p>Scoring 3.50 CGPA</p>
-            </div>
-            <div class="resume-item">
-              <h4>BACHELOR IN Comuter Science</h4>
-              <h5>2019 - 2023</h5>
-              <p><em>Punjab University, Pakistan</em></p>
-              <p>2nd Division</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -364,7 +349,7 @@
                 <li>I have worked on different marketplaces of Amazon like ( United States, United Kingdom, Australia,
                   Canada, UAE, etc ).
                 </li>
-                <li>Created $100k+ to work with different clients on different Businesses ( Private Label, Wholesale ).
+                <li>Created $100k+ to work with different clients on different Businesses ( Wholesale ).
                 </li>
               </ul>
             </div>
