--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
 
       </div>
-    </section><!-- End About Section -->
+    </section>
 
     <!-- ======= Facts Section ======= -->
     <section id="facts" class="facts">
